<resources>
    <string name="app_name">РК Вардар</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="rk_vardar_1961">РК Вардар 1961</string>
    <string name="composition_2025_26">СОСТАВ 2025/26</string>

    <string-array name="string_array">
        <item>За клубот</item>
        <item>Екипа</item>
        <item>Галерија</item>
    </string-array>

    <string name="prava">© 2025 Ракометен клуб ВАРДАР. Сите права задржани.</string>
    <string name="check_internet_title">Connection failed</string>
    <string name="check_internet_message">This application requires internet connectivity. Please check your internet connection</string>
    <string name="check_internet_settings">Retry</string>
    <string name="check_internet_cancel">Cancel</string>

    <string name="istorija_na_rakometen_klub">Историја на ракометниот клуб Вардар</string>
    <string name="history">Историја</string>
    <string name="news">Вести</string>
    <string name="for_club">За клубот</string>
    <string name="gallery">Галерија</string>
    <string name="report_info">ЗАПИСНИК од натпреварот -</string>
    <string name="photo_gallery">Фото Галерија</string>
    <string name="video_gallery">Видео Галерија</string>
    <string name="contact">Контакт</string>
    <string name="team">Екипа</string>
    <string name="expert_stuff">Стручен штаб</string>
    <string name="management">Раководство</string>
    <string name="former_lineups">Поранешни состави</string>

    <string name="rk_vardar_title">РК ВАРДАР 1961 АД СКОПЈЕ</string>
    <string name="contact_info">Адреса\nБулевар АСНОМ бр. 1, 1000 Скопје, Македонија\n\n\ncontact@rkvardar1961.com\n\nmedia@rkvardar1961.com</string>

    <string name="image_saved_to_gallery">Сликата е зачувана во галерија</string>
    <string name="online_store">ONLINE ПРОДАВНИЦА</string>
    <string name="results">Резултати</string>
    <string name="championships">ПРВЕНСТВА</string>
    <string name="cups">ПЕХАРИ</string>
    <string name="sponsors_and_friends">СПОНЗОРИ И ПРИЈАТЕЛИ</string>
    <string name="super_league_2025_26">Супер Лига 2025/26</string>
    <string name="play_off_2024_25">Плеј Оф 2024/25</string>
    <string name="european_league_2025_26">Европска Лига 2025/26</string>

    <string name="goalkeepers">ГОЛМАНИ</string>
    <string name="backs">БЕКОВИ</string>
    <string name="pickers">ПИКЕРИ</string>
    <string name="wings">КРИЛА</string>

</resources>
