<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view"

    >

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_zaklubot"

            android:title="@string/for_club"
            />
        <item
            android:id="@+id/nav_ekipa"

            android:title="@string/team"
            />

        <item
            android:id="@+id/nav_vesti"
            android:title="@string/news"
            />
        <item
            android:id="@+id/nav_gallery_photo"

            android:title="@string/photo_gallery" />
        <item
            android:id="@+id/nav_gallery_video"

            android:title="@string/video_gallery" />
        <item
            android:id="@+id/nav_results"

            android:title="@string/results" />
        <item
            android:id="@+id/nav_poranesni_sostavi"

            android:title="@string/former_lineups" />
        <item
            android:id="@+id/nav_contact"

            android:title="@string/contact" />
    </group>



</menu>
